Design: fix a regression on mobile devices.
 * Padding was not set to zero on uls and ols in the list of photos.
 * Also, on mobile, trim some excessive vertical spacing between photos.

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -45,11 +45,15 @@
 
     ul, ol {
       list-style: none;
+      margin: 0;
+      padding: 0;
     }
   }
 
   .collection-items > li {
-    padding-top: 25px;
+    @include min-screen(1200px) {
+      padding-top: 25px;
+    }
 
     &:first-child {
       padding-top: 0;
